app/overlays/primary/kibana_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: elasticsearch-demo-app
spec:
  template:
    spec:
      containers:
        - name: kibana
