app/overlays/primary/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: elasticsearch
  namespace: elasticsearch-demo-app
spec:
  host: elasticsearch.apps.kvcluster1.apps.development.wels.home
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kibana
  namespace: elasticsearch-demo-app
spec:
  host: kibana.apps.kvcluster1.apps.development.wels.home
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: coordinate
  namespace: elasticsearch-demo-app
spec:
  host: coordinate.apps.kvcluster1.apps.development.wels.home
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: es-master00
  namespace: elasticsearch-demo-app
spec:
  host: es-master00.apps.kvcluster1.apps.development.wels.home
